# auto-author

./: .bd-migration-note.txt  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_HANDOFF.md  AI_GUIDELINES.md  AUTO_AUTHOR_GAP_ANALYSIS.md  AUTO_AUTHOR_USER_MANUAL.md  BACKEND_DEPLOYMENT_PLAN.md  CLAUDE-cf.md  CLAUDE.md  CODEBASE_ANALYSIS_SUMMARY.md  CONTRIBUTING.md  CURRENT_SPRINT.md  CURRENT_STATUS.md  DEPLOYMENT.md  DOCUMENTATION_MANAGEMENT_SUMMARY.md  FRONTEND_REVIEW_REPORT.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_old.md  IMPLEMENTATION_STATUS.md  KEYBOARD_NAVIGATION_ACTION_PLAN.md  KEYBOARD_NAVIGATION_REPORT.md  LICENSE  PHASE1_IMPLEMENTATION_PLAN.md  QWEN.md  README.md  REVISED_DEVELOPMENT_PLAN.md  SECURITY_IMPLEMENTATION_PLAN.md  SYSTEM_TESTS.md  TODO.md  TODO_CONSOLIDATED.md  UI_IMPROVEMENTS_TODO.md  application-summary.md  ecosystem.config.js  ecosystem.config.production.template.js  ecosystem.config.template.js  frontend-backend-api-gaps-analysis.md  implementation-plan-user-story-4.2.md  (+11 more)
backend/: .coverage  .coveragerc  .env.example  .env.test  .gitignore  ENV_VAR_CHANGELOG.md  README.md  README_MONITORING.md  TEST_COVERAGE_REPORT.md  draft_generation_test_summary.md  fix_questions_tests.py  fix_test_chapter_id.py  pyproject.toml  pytest.ini  quick_validate.py  refactor_tests.ps1  requirements.in  requirements.txt  run_tests.ps1  run_unit_tests.py  simple_validate.py  test_chapter_tabs_api.py  test_config.py  test_draft_generation_api.py  test_draft_generation_manual.md  test_services_isolated.py  test_services_summary.py  validate_chapter_tabs.py
backend/app/: __init__.py  main.py  populate_db_test_data.py
backend/app/api/: dependencies.py  health.py  metrics.py  middleware.py  request_validation.py
backend/app/core/: better_auth_session.py  config.py  entitlements.py  logging.py  security.py
backend/app/db/: audit_log.py  base.py  book.py  book_cascade_delete.py  database.py  indexing_strategy.py  monitoring.py  questions.py  redis.py  session.py  stripe_events.py  toc_transactions.py  usage.py  user.py
backend/app/models/: __init__.py  book.py  chapter_access.py  session.py  user.py
backend/app/schemas/: __init__.py  book.py  errors.py  transcription.py  user.py
backend/app/scripts/: migration_chapter_tabs.py
backend/app/services/: ai_cache_service.py  ai_errors.py  ai_service.py  chapter_access_service.py  chapter_cache_service.py  chapter_error_handler.py  chapter_soft_delete_service.py  chapter_status_service.py  cloud_storage_service.py  content_analysis_service.py  content_enhancement.py  export_service.py  export_templates.py  file_upload_service.py  genre_question_templates.py  historical_data_service.py  question_feedback_service.py  question_generation_service.py  question_quality_service.py  session_service.py  style_templates.py  transcription_enhancement.py  transcription_service.py  transcription_service_aws.py  user_level_adaptation.py
backend/app/utils/: __init__.py  error_handlers.py  offensive_words.json  validators.py
backend/archived_tests/: test_config.py  test_draft_generation_api.py  test_file_upload_service.py  test_services_isolated.py  test_services_summary.py  test_toc_transactions.py
backend/claudedocs/: 2025-12-03_SESSION.md  SESSION.md  SPRINT2_UNIMPLEMENTED_FEATURES.md
backend/scripts/: split_books_py.py  test_data_manager.py  verify_question_indexes.py
backend/tests/: README.md  TEST_COVERAGE_NEW_FEATURES.md  TEST_COVERAGE_SUMMARY.md  conftest.py  db_guard.py  refactoring-guide.md  test_batch_question_responses.py  test_db_guard.py  test_debug_chapter_questions.py  test_debug_questions.py  test_debug_questions_simple.py  test_e2e_no_mocks.py  test_error_handlers.py  test_health.py  test_main.py  test_metrics.py  test_mongodb_atlas_connection.py  test_monitoring.py  test_openai_key_resolution.py  test_question_indexes.py  test_question_verification.py  test_questions_batch.py  test_sentry_observability.py  test_services_isolated.py  test_services_summary.py  test_startup_indexes.py  test_system_e2e.py  test_system_e2e_simplified.py  test_toc_transactions.py
backend/tests/factories/: models.py
backend/tests/fixtures/: chapter_tabs_fixtures.py  question_generation_fixtures.py
backend/tests/integration/: run_test_chapter_tabs_integration.py  test_chapter_questions_integration.py  test_chapter_questions_integration.py.disabled  test_chapter_tabs_integration.py
backend/tests/load/: locustfile.py  staging_smoke.py
backend/tests/load_tests/: __init__.py  test_mongodb_connection_pool.py
backend/tests/performance/: benchmark.py
backend/tests/test_api/: run_test_api.py  test_ai_error_responses.py  test_ai_usage_quota.py  test_api.py  test_billing_checkout.py  test_billing_portal.py  test_book_cover_upload.py  test_book_cover_upload_comprehensive.py  test_chapter_questions_api.py  test_chapter_questions_api.py.disabled  test_dependencies.py  test_dependencies.py.backup  test_draft_generation.py.disabled  test_draft_generation_simple.py  test_e2e_exempt.py  test_enhancement_endpoint.py  test_entitlement_gate.py  test_export_endpoints.py  test_question_regeneration.py  test_questions_integration.py  test_rate_limit_routes.py  test_redis_rate_limiting.py  test_session_middleware.py  test_stripe_webhook.py  test_style_transformation.py  test_transcription.py  test_transcription_endpoint.py  test_transcription_enhancement_endpoint.py  test_users_comprehensive.py  test_webhooks.py
backend/tests/test_core/: test_better_auth_session.py  test_book_crud_actual.py  test_entitlements.py  test_security.py
backend/tests/test_db/: test_audit_log.py  test_cascade_delete_atomic.py  test_lost_update_guard.py  test_n1_and_projection.py  test_questions.py  (+5 more)
(+1078 files in other folders)
