[project]
name = "auto-author-backend"
version = "0.1.0"
description = "AI-powered book authoring backend API with FastAPI and MongoDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core FastAPI dependencies
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    # Database
    "pymongo==4.13.2",
    "motor==3.7.1",
    # Redis for distributed rate limiting and caching
    "redis>=5.0.0",
    # Configuration and environment
    "python-dotenv==1.1.1",
    "pydantic[email]==2.11.7",
    "pydantic-settings==2.10.1",
    # AI and external APIs
    "openai==1.97.1",
    "requests==2.32.4",
    # Authentication and security
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    # AWS SDK for transcription and S3
    "boto3==1.39.14",
    # Image processing and storage
    "cloudinary==1.44.1",
    "pillow==11.3.0",
    # Export functionality
    "reportlab==4.4.3",
    "python-docx==1.2.0",
    "html2text==2025.4.15",
    # Testing dependencies
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
    "httpx==0.28.1",
    "pytest-mock==3.14.1",
    "locust==2.37.14",
    "faker==37.4.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bcrypt==4.3.0",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "botocore==1.39.14",
    "brotli==1.1.0",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "configargparse==1.7.1",
    "coverage[toml]==7.10.0",
    "cryptography==45.0.5",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "email-validator==2.2.0",
    "flask==3.1.1",
    "flask-cors==6.0.1",
    "flask-login==0.6.3",
    "gevent==25.5.1",
    "geventhttpclient==2.3.4",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "idna==3.10",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jmespath==1.0.1",
    "locust-cloud==1.26.3",
    "lxml==6.0.0",
    "markupsafe==3.0.2",
    "msgpack==1.1.1",
    "packaging==25.0",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "psutil==7.0.0",
    "pyasn1==0.6.1",
    "pycparser==2.22",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-engineio==4.12.2",
    "python-socketio[client]==5.13.0",
    "pyzmq==27.0.0",
    "rsa==4.9.1",
    "s3transfer==0.13.1",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "websocket-client==1.8.0",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
    "zope-event==5.1.1",
    "zope-interface==7.2",
]
