[project]
name = "auto-author-backend"
version = "0.1.0"
description = "AI-powered book authoring backend API with FastAPI and MongoDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core FastAPI dependencies
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    # Database
    "pymongo==4.13.2",
    "motor==3.7.1",
    # Configuration and environment
    "python-dotenv==1.1.1",
    "pydantic[email]==2.11.7",
    "pydantic-settings==2.10.1",
    # AI and external APIs
    "openai==1.97.1",
    "requests==2.32.4",
    # Authentication and security
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    # AWS SDK for transcription and S3
    "boto3==1.39.14",
    # Image processing and storage
    "cloudinary==1.44.1",
    "pillow==11.3.0",
    # Export functionality
    "reportlab==5.0.0",
    "python-docx==1.2.0",
    "html2text==2025.4.15",
    "ebooklib==0.20",
    "stripe==15.3.0",
]

# Test, load-test, and dev tooling are NOT production runtime dependencies.
# Install with `uv sync --extra test` (CI) / `--all-extras` (full dev).
# Transitive deps of these (flask, gevent, werkzeug, pyzmq, …) are resolved
# into uv.lock by the resolver — do not list them by hand here.
[project.optional-dependencies]
test = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
    "faker==40.23.0",
    "coverage[toml]==7.10.0",
    "httpx==0.28.1",  # used only by tests; not imported by app/
]
load = [
    "locust==2.37.14",
    "locust-cloud==1.26.3",
]
dev = [
    "auto-author-backend[test,load]",
]
